--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 mmpose-dev-1.x/
 vis/
+rgbd-pose3d-master/weights
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,windows,linux,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos,windows,linux,visualstudiocode
