--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ mmpose-dev-1.x/
 vis/
 vis_result/
 rgbd-pose3d-master/weights
+/*.pdf
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,windows,linux,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos,windows,linux,visualstudiocode
