--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "keypoints",
         "linalg",
         "mmpose",
+        "padder",
         "proba",
         "savgol",
         "sktime"
